Header rtl responsive design,Fixed the sidebar icon visibility issue.,Horizontal-sidebar header design issue solved

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -54,21 +54,21 @@
       outline: none;
       border: none;
       border-radius: 26px;
-      padding: 0 56px 0 24px;
+      padding: 0 24px 0 56px;
       font-size: 16px;
+      [dir="rtl"] & {
+        padding: 0 56px 0 24px;
+      }
     }
 
     #searchQuerySubmit {
       width: 56px;
       height: 44px;
-      margin-left: -56px;
+      // margin-left: -56px;
+      position: absolute;
       background: none;
       border: none;
       outline: none;
-      [dir="rtl"] & {
-        margin-right: -56px;
-        margin-left: unset;
-      }
     }
 
     #searchQuerySubmit:hover {
@@ -79,6 +79,7 @@
       width: 15px;
       height: 15px;
       stroke: $semi-dark;
+      fill: none;
     }
 
   }
@@ -124,6 +125,7 @@
   svg {
     width: $header-wrapper-nav-icon-size;
     height: $header-wrapper-nav-icon-size;
+    stroke: #6d6d6d;
   }
 
   &:before {
