--- a/assets/scss/pages/_dashboard_default.scss
+++ b/assets/scss/pages/_dashboard_default.scss
@@ -2596,6 +2596,7 @@ footer {
             stroke: var(--theme-default);
             width: 25px;
             height: 25px;
+            fill: none;
           }
         }
         .balance-detail{
@@ -2625,6 +2626,7 @@ footer {
           width: 20px;
           height: 20px;
           padding-top: 0;
+          fill: none;
         }
         span{
           font-size: 16px;
@@ -2642,6 +2644,7 @@ footer {
         width: 18px;
         height: 18px;
         stroke: $dark-gray;
+        fill: none;
       }
     }
   }
